--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,3 @@
 Flask==0.10.1
 Jinja2==2.8
-MarkupSafe==0.23
-Twisted==16.1.1
-Werkzeug==0.11.9
-argparse==1.2.1
-itsdangerous==0.24
-wsgiref==0.1.2
-zope.interface==4.1.3
+gunicorn
